[refactor] Update build for Java 17